WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96744
LocaleMac should fallback to defaultLanguage for an invalid locale
https://bugs.webkit.org/show_bug.cgi?id=96744
Summary
LocaleMac should fallback to defaultLanguage for an invalid locale
Keishi Hattori
Reported
2012-09-14 03:07:48 PDT
LocaleMac should fallback to defaultLanguage for an invalid locale
Attachments
Patch
(3.30 KB, patch)
2012-09-14 03:22 PDT
,
Keishi Hattori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keishi Hattori
Comment 1
2012-09-14 03:22:07 PDT
Created
attachment 164088
[details]
Patch
Kent Tamura
Comment 2
2012-09-14 03:29:13 PDT
Comment on
attachment 164088
[details]
Patch ok
WebKit Review Bot
Comment 3
2012-09-14 03:59:34 PDT
Comment on
attachment 164088
[details]
Patch Clearing flags on attachment: 164088 Committed
r128582
: <
http://trac.webkit.org/changeset/128582
>
WebKit Review Bot
Comment 4
2012-09-14 03:59:37 PDT
All reviewed patches have been landed. Closing bug.
Roger Fong
Comment 5
2012-09-14 10:09:21 PDT
Hello, Currently there are one of two revisions that are causing the Windows test bots to exit early after 20 crashes. This is one possible candidate. Do you think this could have caused a large quantity of accessibility tests on Windows 7 to start failing all of a sudden? The Windows bots have suddenly gotten into a terrible state so if you could verify this quickly I'd be greatly appreciative. Thanks Here are the failing tests: accessibility/accessibility-node-memory-management.html: [object DocumentFragment] accessibility/accessibility-node-reparent.html: [object DocumentFragment] accessibility/accessibility-object-detached.html: [object DocumentFragment] accessibility/adjacent-continuations-cause-assertion-failure.html: [object DocumentFragment] accessibility/anchor-linked-anonymous-block-crash.html: [object DocumentFragment] accessibility/anonymous-render-block-in-continuation-causes-crash.html: [object DocumentFragment] accessibility/aria-activedescendant-crash.html: [object DocumentFragment] accessibility/aria-checkbox-checked.html: [object DocumentFragment] accessibility/aria-fallback-roles.html: [object DocumentFragment] accessibility/aria-hidden-update.html: [object DocumentFragment] accessibility/aria-hidden-updates-alldescendants.html: [object DocumentFragment] accessibility/aria-labelledby-overrides-aria-label.html: [object DocumentFragment] accessibility/canvas-accessibilitynodeobject.html: [object DocumentFragment] accessibility/canvas-description-and-role.html: [object DocumentFragment] accessibility/canvas-fallback-content.html: [object DocumentFragment] accessibility/content-changed-notification-causes-crash.html: [object DocumentFragment] accessibility/contenteditable-hidden-div.html: [object DocumentFragment] accessibility/contenteditable-table-check-causes-crash.html: [object DocumentFragment] accessibility/crash-determining-aria-role-when-label-present.html: [object DocumentFragment]
Roger Fong
Comment 6
2012-09-14 12:24:27 PDT
The issue was fixed, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug