Source/WebCore/platform/text/mac/LocaleMac.mm
@@ -71,6 +71,11 @@ LocaleMac::LocaleMac(const String& localeIdentifier)
     : m_locale([[NSLocale alloc] initWithLocaleIdentifier:localeIdentifier])
     , m_didInitializeNumberData(false)
 {
+    NSArray* availableLanguages = [NSLocale ISOLanguageCodes];
+    // NSLocale returns a lower case NSLocaleLanguageCode so we don't have care about case.
+    NSString* language = [m_locale.get() objectForKey:NSLocaleLanguageCode];
+    if ([availableLanguages indexOfObject:language] == NSNotFound)
+        m_locale = [[NSLocale alloc] initWithLocaleIdentifier:defaultLanguage()];
 }
 
 LocaleMac::~LocaleMac()
